--- a/style.css
+++ b/style.css
@@ -1,7 +1,17 @@
 header {
     /* Photo by Fotis Fotopoulos on Unsplash */
 	background-image: url("./img/unsplash.jpg");
+	background-position: center center ;
+	background-size: cover;
+	background-attachment: fixed;
+	height:90vh;
+}
+
+.project-bg {
+    /* Photo by Ron Whitaker on Unsplash */
+	background-image: url("./img/ron-whitaker.jpg");
 	background-position: center;
-    background-size: cover;
-	height:80vh;
+	background-size: cover;
+	background-attachment: fixed;
+	height:90vh;
 }
