--- a/style.css
+++ b/style.css
@@ -37,3 +37,7 @@ strong{
 	border-radius: 20%;
 	border: solid 2px #4BBF73;
 }
+.error-message{
+	margin-top: -4em ! important;
+	margin-bottom: 4em !important;
+}
